--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -1195,7 +1195,7 @@
     background-color: #f7f7f7;
 }
 .report-record-card.even {
-    background-color: #ffffff;
+    background-color: #ffae62;
 }
 /* --- NEW: Vertical Report Field Styles --- */
 .report-field {
