--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -1192,7 +1192,7 @@
 }
 /* Add alternating colors */
 .report-record-card.odd {
-    background-color: #f7f7f7;
+    background-color: #79ff5f;
 }
 .report-record-card.even {
     background-color: #ffae62;
@@ -1230,7 +1230,6 @@
     margin-top: 15px;
     padding: 10px;
     border-top: 1px solid #ddd;
-    background-color: #f9f9f9;
     border-radius: 6px;
     text-align: center; /* Center align the table group heading */
 }
