--- a/templates/search_data.html
+++ b/templates/search_data.html
@@ -1614,7 +1614,7 @@
                     const currentUser = "{{ username }}";
                     const superUsers = ["glorycash.1", "khanhommha"];
                     const closedStatuses = ['อนุมัติ', 'ไม่อนุมัติ', 'ยกเลิก'];
-                    const superUserStatusOptions = ['รอติดต่อ', 'รอดำเนินการ', 'อนุมัติ', 'ไม่อนุมัติ', 'ยกเลิก'];
+                    const superUserStatusOptions = ['รอติดต่อ', 'รอดำเนินการ', 'อนุมัติ', 'ไม่อนุมัติ', 'ยกเลิก', 'ไม่ส่งเอกสาร'];
 
                     // Define the possible next statuses for each current status for NORMAL users
                     const nextStatusMap = {
